fix wrapping in ie

--- a/resources/assets/less/bem/beatmap-score-top.less
+++ b/resources/assets/less/bem/beatmap-score-top.less
@@ -149,9 +149,7 @@
   }
 
   &__user-box {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+    flex: none;
   }
 
   &__username {
